# ExploreAIAgent

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.template.yaml  explore-ai-agent.spec  日志
csrc/: shell_executor.c  shell_executor.h
docs/: API Adapter详细设计文档v1.1.md  ConversationRefinerAgent详细设计文档v1.0.md  DeepExplorer详细设计文档v1.0.md  ExplorationQualityEvaluator详细设计文档v1.1-已废弃.md  ExplorationQualityEvaluator详细设计文档v1.2.md  ExplorationRefinerAgent详细设计文档v1.0-已废弃.md  ExplorationRefinerAgent详细设计文档v1.1.md  Explore AI Agent架构设计文档v1.1.md  FastExplorer详细设计文档v1.1.md  MainAgent详细设计文档v1.0-已废弃.md  MainAgent详细设计文档v1.2.md  Orchestrator详细设计文档v1.0-已废弃.md  Orchestrator详细设计文档v1.2.md  SearchStrategyAgent详细设计文档v1.0-已废弃.md  ToolResultRefinerAgent详细设计文档v1.0.md  WorkDirInitializer详细设计文档v1.0.md  上下文管理工具详细设计文档v1.1.md  工作原则.md  底层工具详细设计文档v1.1.md  部署模式详细设计文档v1.0.md  配置接入改造计划v1.0.md  配置管理模块详细设计文档v1.0.md
src/: cli.rs  lib.rs  main.rs  terminal.rs
tests/: debug_shell.rs  debug_shell2.rs  test_api_adapter.rs  test_config.rs  test_conversation_context.rs  test_conversation_manager.rs  test_conversation_refiner.rs  test_deep_explorer.rs  test_deployment.rs  test_e2e_hedge_fund.rs  test_e2e_shell.rs  test_execute_shell.rs  test_exploration_context.rs  test_exploration_context_tool_executor.rs  test_exploration_refiner.rs  test_fast_explore_tool.rs  test_fast_explorer.rs  test_file_info.rs  test_integration.rs  test_list_dir.rs  test_main_agent.rs  test_orchestrator.rs  test_path_manager.rs  test_quality_evaluator.rs  test_read_file.rs  test_search_content.rs  test_search_files.rs  (+3 more)
(+48 files in other folders)
