[package]
name = "explore-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
glob = "0.3"
walkdir = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
minreq = { version = "2", features = ["https-rustls"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
